fix padding bug at the bottom. 56px gap added straight to darkgreenoverlay instead

--- a/src/pages/qna/Dropdown.module.css
+++ b/src/pages/qna/Dropdown.module.css
@@ -1,5 +1,6 @@
 .dropdownWrapper {
     border-radius: 20px;
+    padding: 8px 0px 8px 0px;
 }
 
 
